--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
     // 🧠 The person also has an `ageGracefully` method, which increases `age` by 1 each time it's called.
     // 🧠 But there's a catch: once `age` reaches 12, the `ageGracefully` method will have no effect.
     class PeterPan {
-
+      constructor(name) {
+      this.name = name;
+      this.age = 0;
     }
+    ageGracefully(){
+      if (this.age < 12) {
+        this.age++
+      }
+    }
+  }
 
     // 👉 CHALLENGE 2
     // 🧠 Build an AirPlane class. This class allows to instantiate airplanes.
@@ -38,7 +46,23 @@
     // 🧠 Calling `down` changes the `altitude` prop appropriately and returns the updated `altitude`.
     // 🧠 If calling `down` would cause the plane to go below altitude zero, `altitude` is set to 0 and the string "CRASH!" is returned.
     class AirPlane {
-
+      constructor(desiredmodel){
+        this.model = desiredmodel;
+        this.altitude = 0;
+      }
+      up(meters){
+        this.altitude += meters
+        return this.altitude
+      }
+      down(meters){
+        if (this.altitude >= meters) {
+          this.altitude -= meters
+          return this.altitude
+        } else {
+          this.altitude = 0;
+          return "CRASH!"
+        }
+      }
     }
 
     // 👉 CHALLENGE 3
@@ -48,7 +72,23 @@
     // 🧠 The methods work as one might expect, changing the value of `isOn` to the appropriate Boolean.
     // 🧠 The methods also return one of these two strings: "You turned the bulb ON", or "You turned the bulb OFF".
     class Bulb {
-
+      isOn = false;
+      turnOn(){
+        this.isOn = true;
+        return "You turned the bulb ON";
+      }
+      turnOff(){
+        this.isOn = false;
+        return "You turned the bulb OFF";
+      }
+      toggle(){
+        this.isOn = !this.isOn
+        if (this.isOn) {
+          return "You turned the bulb ON"
+        } else {
+          return "You turned the bulb OFF"
+        }
+      }
     }
 
     // 👉 CHALLENGE 4
@@ -66,8 +106,20 @@
     //   minusThree.count() // returns null
     //   minusThree.count() // returns null
     class CountDown {
-
+      constructor(number){
+        this.currentNum = number
+      }
+      count(){
+        if (this.currentNum > 0){
+        return `${this.currentNum--}!`
+        } else if (this.currentNum === 0) {
+          this.currentNum--
+          return "Liftoff!"
+        } else {
+          return null
+        }
     }
+  }
 
     // 🧪 TESTS, do not work below this line
     // 🧪 TESTS, do not work below this line
